# avogenerators

./: pyproject.toml
src/avogadro_generators/dalton/: dalton.py  options.json
src/avogadro_generators/gamessuk/: gamessuk.py  options.json
src/avogadro_generators/gaussian/: gaussian.py
src/avogadro_generators/molpro/: molpro.py  options.json
src/avogadro_generators/mopac/: mopac.py  options.json  syntax.json
src/avogadro_generators/nwchem/: nwchem.py  options.json  syntax.toml
src/avogadro_generators/orca/: orca.py
src/avogadro_generators/psi4/: options.json  psi4.py
src/avogadro_generators/pyscf/: options.json  pyscf.py
src/avogadro_generators/qchem/: options.json  qchem.py
src/avogadro_generators/terachem/: options.json  terachem.py
src/avogenerators/: __init__.py
src/avogenerators/gaussian/: options.json
src/avogenerators/mopac/: syntax.json
src/avogenerators/orca/: options.json
